--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -5,14 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".Register_Page">
+    tools:context=".registerPage">
 
+    <!-- Scaled Background Image -->
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Auto-scale TextView -->
     <TextView
         android:id="@+id/tv_Registertitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="350dp"
+        android:autoSizeMaxTextSize="60sp"
+        android:autoSizeMinTextSize="20sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:text="Sign Up"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -22,26 +38,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/regusername"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/jason_custom_edit_text"
-        android:drawableStart="@drawable/person_logo"
-        android:drawablePadding="5dp"
-        android:ems="16"
-        android:hint="Username:"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Registertitle" />
 
     <EditText
         android:id="@+id/regname"
@@ -60,7 +56,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regusername" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Registertitle" />
 
     <EditText
         android:id="@+id/regemail"
@@ -100,16 +96,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regemail" />
 
-
-
-    <Button
+    <android.widget.Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#D5702B"
+        android:layout_height="50dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="80dp"
+        android:background="@drawable/rounded_orange_btn"
+        android:textColor="@color/white"
         android:text="Register"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/regpassword" />
@@ -130,6 +125,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
+            android:autoSizeMaxTextSize="16sp"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
             android:text="Already have an Account?"
             android:textColor="@color/grey"
             android:textSize="16sp" />
@@ -139,11 +138,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:autoSizeMaxTextSize="16sp"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
             android:text="Log In Here!"
             android:textColor="#03A9F4"
             android:textSize="16sp"
             android:textStyle="bold" />
-    </LinearLayout>
 
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
